# RC

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  channels.py  guilds.py  messages.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/migrations/: env.py
client/: README.md  app.js  index.html  styles.css
deploy/: windows-server.md
docs/: architecture.md
server/: README.md  index.js  package.json
